# proc-macro-workshop-solution-part2

./: Cargo.toml  README.md
src/: impl_body copy 2.rs  impl_body copy 3.rs  impl_body copy.rs  impl_body.rs  lib.rs
tests/: 01-parse.rs  02-impl-debug.rs  03-custom-format.rs  04-type-parameter.rs  05-phantom-data.rs  06-bound-trouble.rs  07-associated-type.rs  08-escape-hatch.rs
