[package]
name = "custom_debug"
version = "0.1.0"
edition = "2024"
autotests = false


[[test]]
name = "tests"
path = "tests/progress.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["extra-traits"] }

[dev-dependencies]
trybuild = { version = "1.0.103", features = ["diff"] }
